// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> by default on desktop matches with snapshot 1`] = `
<div
  className="carousel__FlexContainer-sc-1bidnho-0 kTFyVx"
>
  <div
    className="carousel-inner__StyledCarouselInner-nc2pvj-0 gtjfbb"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="carousel-inner__StyledCarouselPageContainer-nc2pvj-1 ekQvPS"
      onClick={[Function]}
    >
      <div
        className="carousel-page__StyledPage-sc-5pf2p2-0 jEWHLT"
      >
        <div
          className="carousel-page__StyledItem-sc-5pf2p2-1 lmKqmT"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="k-ProjectCard__grid--flex marger__StyledMarger-q3lecu-0 evHeqt"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="k-ProjectCard__grid--flex marger__StyledMarger-q3lecu-0 fXmpKT"
              >
                <p
                  className="k-Title k-ProjectCard__grid--flex__item-fluid k-Card__title k-Title--senary k-Title--withoutMargin"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="carousel-page__StyledItem-sc-5pf2p2-1 dccRYa"
        />
        <div
          className="carousel-page__StyledItem-sc-5pf2p2-1 dccRYa"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> by default on mobile matches with snapshot 1`] = `
<div
  className="carousel__FlexContainer-sc-1bidnho-0 kTFyVx"
>
  <div
    className="carousel-inner__StyledCarouselInner-nc2pvj-0 gtjfbb"
    onScroll={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="carousel-inner__StyledCarouselPageContainer-nc2pvj-1 ekQvPS"
      onClick={[Function]}
    >
      <div
        className="carousel-page__StyledPage-sc-5pf2p2-0 jEWHLT"
      >
        <div
          className="carousel-page__StyledItem-sc-5pf2p2-1 lmKqmT"
        >
          <div
            className="k-ProjectCard k-Card k-Card--light"
            href={null}
            title={null}
          >
            <div
              className="k-ProjectCard__grid"
            >
              <div
                className="k-ProjectCard__grid--flex marger__StyledMarger-q3lecu-0 evHeqt"
              >
                <span
                  className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
                  tabIndex={null}
                >
                  <img
                    alt=""
                    className="k-ButtonImage__img"
                    src={null}
                  />
                </span>
                <p
                  className="k-Paragraph k-ProjectCard__grid--flex__item-fluid k-u-margin-left-single k-u-margin-right-single k-Paragraph--quaternary k-Paragraph--withoutMargin k-Paragraph--normalLineHeight"
                >
                  <span
                    className="k-u-weight-regular"
                  >
                    Name
                  </span>
                </p>
              </div>
              <div
                className="k-ProjectCard__grid--flex marger__StyledMarger-q3lecu-0 fXmpKT"
              >
                <p
                  className="k-Title k-ProjectCard__grid--flex__item-fluid k-Card__title k-Title--senary k-Title--withoutMargin"
                >
                  A
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="carousel-page__StyledItem-sc-5pf2p2-1 gbdUmm"
        />
        <div
          className="carousel-page__StyledItem-sc-5pf2p2-1 gbdUmm"
        />
      </div>
    </div>
  </div>
</div>
`;
